<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    android:layout_margin="8dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="5dp"
    card_view:cardBackgroundColor="@color/movie_card"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/thumbnil_preview"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_film_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:fontFamily="@font/actor"
            android:text="@string/Filename"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/text_color"
            android:textSize="13dp"
            app:layout_constraintLeft_toRightOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_film_name">

            <TextView
                android:textColor="@color/text_color"
                android:id="@+id/txtVidSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:text="@string/VideoSize" />

            <Button
                android:layout_marginLeft="2dp"
                android:id="@+id/btnDownload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_download"
                android:drawablePadding="8sp"
                android:padding="4dp"
                android:textColor="@color/text_color"
                android:text="@string/Download" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>